# KBC-rakv0-save

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  requirements.txt  vercel.json  wood-match.cs
api/: index.py  parse.js  upload.js
api/_lib/: clientInfo.js  saveParser.js
docs/: architecture.md
public/: index.html  kbc-common.css  motion.css  motion.html  nyanko-club-forgery.css  nyanko-club-forgery.html  nyanko-club-forgery.js  nyanko-club-renderer.js  ranking.css  ranking.html  render-only.html  save-editor.html
public/assets/nyanko-club/: img061_00_nyankoClub.imgcut
public/assets/nyanko-club/layout/presets/nyanko-club/: img001_ja.imgcut  img006_ja.imgcut  img007.imgcut  img061_00_nyankoClub-native.mamodel
src/kbc_save_editor/: __init__.py  app.py  asset_service.py  bcsfe_runtime.py  bcsfe_update.py  cli.py  labels.py  models.py  save_service.py
tests/: test_save_service.py
