[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbc-rakv0-save"
version = "0.1.0"
description = "KBC save data editor powered by BCSFE-Python"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "sinsuirakv0" }]
dependencies = [
  "bcsfe>=3.5.2,<4",
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "python-multipart>=0.0.20,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
kbc-save-api = "kbc_save_editor.cli:run_api"
kbc-update-bcsfe = "kbc_save_editor.bcsfe_update:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
